--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 			目前主要針對機器學習的方向在學習，由於曾經有過想學前端網頁和APP
 			的念頭，因此加選這門課，雖然學習動作稍慢，但還是慢慢前進，加油！！
 			</p>
+				
+			<a href="./Page1.html">服務學習心得Go！！</a>
 		</div>
 	</body>
 	
